--- a/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
+++ b/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
@@ -26,12 +26,12 @@
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg" alt="Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
     <p class="lead">Uma mulher trans foi morta a tiros na noite de domingo na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas.</p>
-<p>O incidente ocorreu por volta das 22h, logo após a passagem dos blocos de Carnaval. A mulher trans que veio a óbito estava armada com uma faca e teria esfaqueado outra mulher trans, que seria sua desafeta.</p>
-<p>A vítima tentou se proteger atrás de um grupo de agentes da Guarda Municipal presentes no local. Apesar das ordens para que a agressora parasse, ela continuou avançando contra a vítima e os guardas.</p>
-<p>Diante da ameaça, um dos guardas municipais disparou contra a mulher para se defender e proteger a vítima. A mulher atingida correu alguns metros e caiu ferida no chão.</p>
-<p>Ela foi levada ao Hospital de Urgência e Emergência de Vitória, mas morreu ao dar entrada na unidade. A mulher que foi esfaqueada recebeu atendimento médico e foi conduzida à delegacia para prestar depoimento.</p>
-<p>A Polícia Civil autuou as duas mulheres, de 23 e 28 anos, em flagrante por tentativa de homicídio qualificada por motivo fútil e impossibilidade de defesa da vítima, sendo a de 28 anos considerada participante.</p>
-<p>O guarda municipal que efetuou o disparo foi ouvido e liberado, pois ficou comprovada a legítima defesa de terceiro. O corpo da mulher morta foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
+<p>O caso ocorreu por volta das 22h, logo após a passagem dos blocos de Carnaval. A mulher estava armada com uma faca e teria esfaqueado outra mulher trans, sua desafeta.</p>
+<p>A vítima tentou se proteger atrás de um grupo de agentes da Guarda Municipal presentes na região, mas a agressora continuou tentando atingi-la.</p>
+<p>Os guardas municipais ordenaram diversas vezes que a mulher parasse as agressões e alertaram que atirariam caso ela não obedecesse. Mesmo assim, a suspeita avançou contra os agentes.</p>
+<p>Um dos guardas disparou para se defender e proteger a vítima. A mulher atingida pelos tiros correu alguns metros, caiu ferida e foi levada ao Hospital de Urgência e Emergência, onde morreu ao dar entrada.</p>
+<p>As duas mulheres, de 23 e 28 anos, foram autuadas em flagrante por tentativa de homicídio qualificada. O guarda municipal foi ouvido e liberado, pois ficou comprovada a legítima defesa de terceiro.</p>
+<p>O corpo da mulher morta foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
   </div>
 </body>
 </html>
