--- a/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
+++ b/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória</title>
-  <meta name="description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, em Vitória."/>
+  <meta name="description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_6d78cb6df88509c20a88bd325a352690f1ce48e7/"/>
   <meta property="og:title" content="Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória"/>
-  <meta property="og:description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, em Vitória."/>
+  <meta property="og:description" content="Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png"/>
@@ -25,12 +25,12 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Fespiritosantonoticias.com.br%2Fwp-content%2Fthemes%2Flayout_2019%2Fres%2Fimg%2Flogo.png" alt="Mulher trans é morta pela Guarda Municipal após esfaquear rival no Centro de Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, em Vitória.</p>
-<p>A confusão ocorreu no final da noite de domingo (15), durante o carnaval no Centro de Vitória. Natasha Lucas do Nascimento atacou outra mulher com uma faca na frente dos agentes da Guarda Municipal.</p>
-<p>Testemunhas relataram que a briga teve origem em um desentendimento antigo entre as duas mulheres. A vítima do ataque correu para uma viatura da Guarda Municipal em busca de socorro e proteção.</p>
-<p>Mesmo após ordens para parar, Natasha avançou contra a vítima e foi baleada por um guarda. A vítima da facada afirmou que o agente avisou que atiraria se ela não parasse.</p>
-<p>Natasha foi socorrida e levada ao Hospital Estadual de Urgência e Emergência, mas não resistiu aos ferimentos. A Guarda Municipal afirmou que agiu em defesa da vida da vítima e que as ordens verbais foram ignoradas.</p>
-<p>A Polícia Civil encaminhou a ocorrência para a Delegacia Regional de Vitória. Duas mulheres que estavam com Natasha prestaram esclarecimentos. O corpo foi levado ao Departamento Médico Legal para necropsia.</p>
+    <p class="lead">Natasha Lucas do Nascimento, de 27 anos, foi baleada por um agente da Guarda Municipal após atacar outra mulher na Praça Costa Pereira, Centro de Vitória.</p>
+<p>A confusão ocorreu no final da noite de domingo (15), durante o carnaval no Centro de Vitória. Natasha Lucas do Nascimento atacou outra mulher com uma faca na frente dos agentes da Guarda Municipal na Praça Costa Pereira.</p>
+<p>Testemunhas disseram que a briga teve origem em um desentendimento antigo entre as duas mulheres. A vítima do ataque correu para uma viatura da Guarda Municipal em busca de socorro e tentou se proteger atrás dos agentes.</p>
+<p>Mesmo após ordens para parar, Natasha avançou contra a vítima e a feriu no braço. Um agente da Guarda Municipal disparou contra Natasha após ela ignorar as ordens e continuar a agressão.</p>
+<p>Natasha foi socorrida e levada ao Hospital Estadual de Urgência e Emergência (Heue), mas não resistiu aos ferimentos. A Guarda Municipal afirmou que agiu em defesa da vida da vítima e que o uso da força foi necessário para cessar a agressão.</p>
+<p>A Polícia Civil encaminhou a ocorrência ao plantão da Delegacia Regional de Vitória. Duas mulheres que estavam com Natasha foram levadas para prestar esclarecimentos. O corpo de Natasha foi encaminhado ao Departamento Médico Legal para necropsia.</p>
   </div>
 </body>
 </html>
