--- a/p/esmulti_e0068d58862f8563846d0b997b898b1ccd1e4f01/index.html
+++ b/p/esmulti_e0068d58862f8563846d0b997b898b1ccd1e4f01/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Delegado do Espírito Santo é preso por importunar sexualmente adolescente durante Carnaval</title>
-  <meta name="description" content="Delegado de 40 anos foi preso em flagrante por importunar sexualmente uma adolescente de 14 anos em festa de Carnaval em Apiacá."/>
+  <title>Delegado do Espírito Santo é preso por importunar sexualmente adolescente em festa de Carnaval</title>
+  <meta name="description" content="Delegado de 40 anos foi preso em flagrante após importunar sexualmente uma adolescente de 14 anos em festa no Centro de Apiacá."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_e0068d58862f8563846d0b997b898b1ccd1e4f01/"/>
-  <meta property="og:title" content="Delegado do Espírito Santo é preso por importunar sexualmente adolescente durante Carnaval"/>
-  <meta property="og:description" content="Delegado de 40 anos foi preso em flagrante por importunar sexualmente uma adolescente de 14 anos em festa de Carnaval em Apiacá."/>
+  <meta property="og:title" content="Delegado do Espírito Santo é preso por importunar sexualmente adolescente em festa de Carnaval"/>
+  <meta property="og:description" content="Delegado de 40 anos foi preso em flagrante após importunar sexualmente uma adolescente de 14 anos em festa no Centro de Apiacá."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fdelegacia-cachoeiro1.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fdelegacia-cachoeiro1.jpg"/>
@@ -21,17 +21,18 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Delegado do Espírito Santo é preso por importunar sexualmente adolescente durante Carnaval</h1>
+    <h1>Delegado do Espírito Santo é preso por importunar sexualmente adolescente em festa de Carnaval</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fdelegacia-cachoeiro1.jpg" alt="Delegado do Espírito Santo é preso por importunar sexualmente adolescente durante Carnaval" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fdelegacia-cachoeiro1.jpg" alt="Delegado do Espírito Santo é preso por importunar sexualmente adolescente em festa de Carnaval" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Delegado de 40 anos foi preso em flagrante por importunar sexualmente uma adolescente de 14 anos em festa de Carnaval em Apiacá.</p>
-<p>Um delegado da Polícia Civil do Espírito Santo, de 40 anos, foi preso na noite de domingo (15) suspeito de importunar sexualmente uma adolescente de 14 anos durante uma festa de Carnaval no Centro de Apiacá, no Sul do Estado.</p>
-<p>A adolescente relatou que o homem a perseguiu mesmo após ela afirmar ser menor de idade e tentar se afastar. O suspeito teria dito “gata, eu quero você” e continuado a insistir na aproximação, cessando a conduta apenas quando ela se aproximou do pai.</p>
-<p>A Polícia Militar foi acionada e, Durante a abordagem, ele resistiu, empurrou policiais, xingou e tentou fugir, mas foi contido e algemado.</p>
-<p>Na revista pessoal, os policiais encontraram uma arma registrada na Polícia Civil, e o homem se identificou como delegado Adhemar Pereira Fully. Ele não portava a documentação da arma e teria ameaçado os policiais dizendo que iria prendê-los.</p>
-<p>O Conselho Tutelar acompanhou a adolescente e prestou apoio à família. O delegado foi conduzido à 7ª Delegacia Regional de Cachoeiro de Itapemirim, autuado em flagrante por importunação sexual e encaminhado ao presídio Alfa 10, destinado a policiais civis. A arma institucional, munições e carregador foram apreendidos.</p>
-<p>A Polícia Civil informou que instaurará procedimentos administrativos internos para apurar a conduta do servidor. O delegado também é investigado por acidente com morte em Minas Gerais em 2018, quando foi indiciado por homicídio culposo, embriaguez ao volante e omissão de socorro.</p>
+    <p class="lead">Delegado de 40 anos foi preso em flagrante após importunar sexualmente uma adolescente de 14 anos em festa no Centro de Apiacá.</p>
+<p>O delegado da Polícia Civil do Espírito Santo foi detido na noite de domingo (15) sob suspeita de importunar sexualmente uma adolescente durante uma festa de Carnaval no Centro de Apiacá, no Sul do Estado.</p>
+<p>A adolescente relatou que o homem a perseguiu mesmo após ela afirmar ser menor de idade e tentar se afastar. Ele teria dito “gata, eu quero você” e continuou insistindo até que ela se aproximou do pai.</p>
+<p>A Polícia Militar foi acionada e encontrou o suspeito com sinais claros de embriaguez. Durante a abordagem, ele resistiu, empurrou policiais, xingou e tentou fugir, mas foi contido e algemado.</p>
+<p>Na revista pessoal, os policiais encontraram uma arma registrada na Polícia Civil, e o homem se identificou como delegado Adhemar Pereira Fully. Ele não portava a documentação da arma e ameaçou prender os policiais.</p>
+<p>O Conselho Tutelar acompanhou a adolescente e prestou apoio à família. O delegado foi conduzido à 7ª Delegacia Regional de Cachoeiro de Itapemirim, autuado em flagrante por importunação sexual e encaminhado ao presídio Alfa 10, destinado a policiais civis.</p>
+<p>A arma institucional, munições e um carregador foram apreendidos. A Polícia Civil informou que instaurará procedimentos administrativos para apurar a responsabilidade do servidor.</p>
+<p>O delegado também é investigado por um acidente com morte em Minas Gerais em 2018, quando foi indiciado por homicídio culposo, embriaguez ao volante e omissão de socorro.</p>
   </div>
 </body>
 </html>
