--- a/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
+++ b/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória</title>
-  <meta name="description" content="Uma mulher trans foi morta a tiros na noite de domingo na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas."/>
+  <title>Mulher trans é morta a tiros após confusão no Centro de Vitória</title>
+  <meta name="description" content="Uma mulher trans foi morta a tiros na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas e intervenção da Guarda Municipal."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_afd78f7c52926979222e2f17e7b9207819bf77e1/"/>
-  <meta property="og:title" content="Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória"/>
-  <meta property="og:description" content="Uma mulher trans foi morta a tiros na noite de domingo na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas."/>
+  <meta property="og:title" content="Mulher trans é morta a tiros após confusão no Centro de Vitória"/>
+  <meta property="og:description" content="Uma mulher trans foi morta a tiros na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas e intervenção da Guarda Municipal."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg"/>
@@ -21,17 +21,17 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória</h1>
+    <h1>Mulher trans é morta a tiros após confusão no Centro de Vitória</h1>
     <figure style="margin:0 0 14px 0;">
-      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg" alt="Mulher trans é morta a tiros após confusão na Praça Costa Pereira, em Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
+      <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2Fmorte-mulher-trans-centro.jpg" alt="Mulher trans é morta a tiros após confusão no Centro de Vitória" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Uma mulher trans foi morta a tiros na noite de domingo na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas.</p>
-<p>O caso ocorreu por volta das 22h, logo após a passagem dos blocos de Carnaval. A mulher estava armada com uma faca e teria esfaqueado outra mulher trans, sua desafeta.</p>
-<p>A vítima tentou se proteger atrás de um grupo de agentes da Guarda Municipal presentes na região, mas a agressora continuou tentando atingi-la.</p>
-<p>Os guardas municipais ordenaram diversas vezes que a mulher parasse as agressões e alertaram que atirariam caso ela não obedecesse. Mesmo assim, a suspeita avançou contra os agentes.</p>
-<p>Um dos guardas disparou para se defender e proteger a vítima. A mulher atingida pelos tiros correu alguns metros, caiu ferida e foi levada ao Hospital de Urgência e Emergência, onde morreu ao dar entrada.</p>
-<p>As duas mulheres, de 23 e 28 anos, foram autuadas em flagrante por tentativa de homicídio qualificada. O guarda municipal foi ouvido e liberado, pois ficou comprovada a legítima defesa de terceiro.</p>
-<p>O corpo da mulher morta foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
+    <p class="lead">Uma mulher trans foi morta a tiros na Praça Costa Pereira, no Centro de Vitória, após uma briga envolvendo facadas e intervenção da Guarda Municipal.</p>
+<p>O incidente ocorreu por volta das 22h deste domingo (15), após a passagem dos blocos de Carnaval na Praça Costa Pereira. A confusão começou quando uma mulher trans, armada com uma faca, esfaqueou outra mulher trans, que seria sua desafeta.</p>
+<p>A vítima tentou se proteger atrás de um grupo de agentes da Guarda Municipal presentes na região. Mesmo com a presença dos guardas, a agressora continuou tentando atingir a vítima, desobedecendo ordens para parar e alertas de que poderia ser necessário o uso de arma de fogo.</p>
+<p>Diante da ameaça, um dos guardas municipais disparou contra a agressora para defender a vítima. A mulher atingida pelos tiros correu alguns metros, caiu ferida e foi levada ao Hospital de Urgência e Emergência de Vitória, onde morreu ao dar entrada.</p>
+<p>As investigações preliminares indicam que a rixa antiga entre as duas mulheres pode ter motivado a briga. A mulher que foi esfaqueada recebeu atendimento médico e prestou depoimento na delegacia.</p>
+<p>A Polícia Civil autuou em flagrante as duas pessoas, de 23 e 28 anos, por tentativa de homicídio qualificada por motivo fútil e impossibilidade de defesa da vítima, sendo a pessoa de 28 anos considerada participante. O guarda municipal foi ouvido e liberado, pois ficou comprovada a legítima defesa de terceiro.</p>
+<p>O corpo da vítima foi encaminhado ao Instituto Médico-Legal para necropsia e posterior liberação aos familiares.</p>
   </div>
 </body>
 </html>
