--- a/p/esmulti_0bfdda192bc5ac112cd7da6948cd6aa949a562b9/index.html
+++ b/p/esmulti_0bfdda192bc5ac112cd7da6948cd6aa949a562b9/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Fiscalização em Guarapari flagra dois caminhões com excesso de peso no transporte de rochas ornamentais</title>
-  <meta name="description" content="Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido durante fiscalização de transporte de rochas ornamentais."/>
+  <meta name="description" content="Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais."/>
   <link rel="canonical" href="https://evwbr.github.io/es/p/esmulti_0bfdda192bc5ac112cd7da6948cd6aa949a562b9/"/>
   <meta property="og:title" content="Fiscalização em Guarapari flagra dois caminhões com excesso de peso no transporte de rochas ornamentais"/>
-  <meta property="og:description" content="Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido durante fiscalização de transporte de rochas ornamentais."/>
+  <meta property="og:description" content="Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais."/>
   <meta property="og:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2026-02-17-at-08.11.48.jpeg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image" content="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2026-02-17-at-08.11.48.jpeg"/>
@@ -25,12 +25,12 @@
     <figure style="margin:0 0 14px 0;">
       <img src="https://res.cloudinary.com/dq2l8okgc/image/fetch/f_jpg,q_auto:good,c_fill,g_auto,w_1200,h_675/https%3A%2F%2Feshoje.com.br%2Fwp-content%2Fuploads%2F2026%2F02%2FWhatsApp-Image-2026-02-17-at-08.11.48.jpeg" alt="Fiscalização em Guarapari flagra dois caminhões com excesso de peso no transporte de rochas ornamentais" style="width:100%;max-width:820px;border-radius:10px;display:block;"/>
     </figure>
-    <p class="lead">Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido durante fiscalização de transporte de rochas ornamentais.</p>
-<p>A fiscalização realizada nesta semana em Guarapari identificou dois veículos transportando rochas ornamentais com excesso de peso.</p>
-<p>Um dos caminhões estava com 7 toneladas acima do limite permitido, enquanto o outro apresentava 12 toneladas de excesso, transportando 90 chapas de granito, sendo 49 chapas além do limite legal, o que corresponde a cerca de 70% acima do permitido.</p>
-<p>A operação resultou em 12 autuações, retenção dos veículos e transbordo de 18 toneladas da carga excedente.</p>
-<p>Os caminhões foram retidos até que a carga fosse regularizada por meio do transbordo do excesso.</p>
+    <p class="lead">Dois caminhões foram retidos em Guarapari por transportar carga acima do limite permitido em fiscalização de transporte de rochas ornamentais.</p>
+<p>A operação resultou em 12 autuações, retenção dos veículos, transbordo de 18 toneladas e emissão de dois Termos Circunstanciados de Ocorrência (TCOs).</p>
+<p>Um dos caminhões transportava carga com 7 toneladas acima do limite legal, enquanto o.</p>
+<p>Os veículos foram retidos até que a carga fosse regularizada por meio do transbordo do excedente.</p>
 <p>Os agentes responsáveis destacaram que o excesso de peso compromete a estabilidade dos veículos, aumenta o risco de acidentes graves e causa danos ao pavimento das rodovias.</p>
+<p>A fiscalização orientou os transportadores a respeitarem os limites legais para garantir a segurança viária e a integridade das estradas.</p>
   </div>
 </body>
 </html>
